...
        ZLImageEditorConfiguration.default().tools = [.draw, .clip, .textSticker, .mosaic, .filter, .adjust]
        ZLImageEditorUIConfiguration.default().toolTitleTintColor = .label
        ZLImageEditorUIConfiguration.default().toolTitleNormalColor = .secondaryLabel
        ZLImageEditorConfiguration.default().clipRatios = [.custom, .wh1x1, .wh4x3, .wh3x4, .wh16x9, .wh9x16]
        let controller = ZLEditImageViewController(image: image, editModel: editModel)
        controller.automaticallyDismiss = false
        controller.doneBtn.accessibilityIdentifier = "image.editor.done"
        controller.cancelBtn.accessibilityIdentifier = "image.editor.cancel"
        controller.editFinishBlock = onFinish
        controller.cancelBlock = onCancel
        return controller
    }

    func updateUIViewController(_ controller: ZLEditImageViewController, context: Context) {}
...
